k3s/base/keycloak/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
    - "keycloak.rumahdaud.com" # Match the hostname in the Gateway
  gateways:
    - keycloak-gateway
  http:
    - route:
        - destination:
            host: keycloak
            port:
              number: 8080 # Replace with the port your keycloak service is listening on
